src/objects/sma__MADataLoadSegment__c.object
<CustomObject>
    <fields>
        <fullName>sma__DataLoad__c</fullName>
        <description>This is the parent-child relationship between data load segments and data loads. The data load itself may have many segments, each of which will have the settings from the data load applied to it.</description>
        <inlineHelpText>This is the parent-child relationship between data load segments and data loads.</inlineHelpText>
        <label>MapAnything Data Load</label>
        <referenceTo>sma__MADataLoad__c</referenceTo>
        <relationshipLabel>MapAnything Data Load Segments</relationshipLabel>
        <relationshipName>MapAnything_Data_Load_Segments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sma__Records__c</fullName>
        <label>Records</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Total_Errors__c</fullName>
        <label>Total Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Total_Succeeded__c</fullName>
        <label>Total Succeeded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MapAnything Data Load Segment</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>MapAnything Data Load Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Data Load Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>